<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.kernel</groupId>
		<artifactId>kernel-parent</artifactId>
		<version>1.2.0-SNAPSHOT</version>
	</parent>
	<artifactId>kernel-crypto-jce</artifactId>
	<version>1.0.6</version>
	<packaging>jar</packaging>
	<name>kernel-crypto-jce</name>
	<properties>
		<kernel.core.version>1.2.0-SNAPSHOT</kernel.core.version>
		<jose4j.version>0.6.5</jose4j.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-core</artifactId>
			<version>${kernel.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bitbucket.b_c</groupId>
			<artifactId>jose4j</artifactId>
			<version>${jose4j.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
                    <maven.compiler.source>11</maven.compiler.source>
                    <maven.compiler.target>11</maven.compiler.target>
                    <compilerArgs>
                		<arg>--add-exports</arg><arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
                </compilerArgs>
                </configuration>
			</plugin>
		</plugins>
	</build>
</project>
